--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -95,3 +95,17 @@
   background-color: white;
   color: black;
 }
+@media only screen and (max-width:756px){
+  .header{
+    width: 350px;
+  }
+  .name{
+    font-size: 20px;
+  }
+  .button1{
+    width: 90px;
+  }
+  .button2{
+    width: 90px;
+  }
+}
