--- a/src/app/carousel.module.css
+++ b/src/app/carousel.module.css
@@ -1,8 +1,10 @@
 .carouselContainer{
     height: 100%;
+    min-height: 100vh;
     width: 100vw;
     overflow: hidden;
     position: relative;
+    z-index: 90;
 }
 .movingCarousel{
     height: 100%;
@@ -45,6 +47,7 @@
     background-position: 50% 50%;
     background-size: cover;
     background-repeat: no-repeat;
+    cursor: pointer;
 }
 .carouselItem1{
     height: 100%;
@@ -53,4 +56,5 @@
     background-position: 50% 50%;
     background-size: cover;
     background-repeat: no-repeat;
+    cursor: pointer;
 }
