--- a/src/app/project.module.css
+++ b/src/app/project.module.css
@@ -128,3 +128,20 @@
     width: 0px;
     height: 0px;
 }
+.projectName{
+    font-weight: 300;
+    font-size: 20px;
+    padding-left: 10px;
+    color: black;
+}
+@media only screen and (max-width:756px){
+    .header{
+      width: 350px;
+    }
+    .button2{
+      width: 90px;
+    }
+    .projectName{
+        font-size: 16px;
+    }
+  }
