--- a/src/app/project.module.css
+++ b/src/app/project.module.css
@@ -42,18 +42,8 @@
     width: 100%;
     filter: url(#round);
     z-index: 101;
-}
-.folder{
-    content:"";
-    width: 100%;
-    position: absolute;
-    left: 0;
-    top: 5vh;
-    background-color: antiquewhite;
-    clip-path: polygon(60% 0, 60% 4vh, 100% 4vh, 100% 100%, 0 100%, 0 0);
-    padding: 10px;
-    padding-top: 6vh;
-    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
 }
 .cross{
     position: absolute;
@@ -62,29 +52,78 @@
     width: 6vh;
     height:10vh;
     color: black;
-    z-index: 100;
+    z-index: 102;
     display: flex;
     justify-content: center;
     padding-top: 2vh;
-    margin-top: 3vh;
-    background-color: antiquewhite;
+    margin-top: 6vh;
+    background-color: #73d0fb;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
     cursor: pointer;
 }
+.folder{
+    content:"";
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 3vh;
+    background-color:#0088cc;
+    clip-path: polygon(40% 0, 43% 5vh, 100% 5vh, 100% 100%, 0 100%, 0 0);
+    padding-top: 8vh;
+    box-sizing: border-box;
+    display: flex;
+    height: 97vh;
+}
+.folderFront{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    background-color: #73d0fb;
+    padding: 10px;
+    padding-bottom: 15px;
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+    box-shadow: 0px -5px 20px 5px rgba(0,0,0,0.5);
+    z-index: 103;
+}
+.projectText{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: black;
+    font-size: 16px;
+}
 .heroProject{
     width: 100%;
-    height: calc(90vh - 20px);
+    height: 100%;
+    position: relative;
+}
+.absoluteBgWrapper{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    filter: url(#round);
+}
+.absoluteBg{
+    width: 100%;
+    height: 100%;
     background-position: 50% 50%;
     background-size: cover;
+    position: absolute;
+    clip-path: polygon(100% calc(50% + 50px), calc(100% - 475px) calc(50% + 50px), calc(100% - 475px) calc(50% - 50px), 100% calc(50% - 50px), 100% 0%, 0% 0%, 0% 100%, 100% 100%);
+    z-index: -1;
 }
 .header {
     position: absolute;
-    left: 0;
     right: 0;
     top: 0;
     bottom: 0;
     margin: auto;
+    margin-right: 10px;
     box-sizing: border-box;
     width: 440px;
     height: 60px;
@@ -93,9 +132,6 @@
     padding: 5px;
     z-index: 10;
     border-radius: 10px;
-    animation: fadeInAnimation ease 1.5s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
     padding: 5px;
     display: flex;
     flex-direction: row;
